--- a/2016/session-3/Session 3 - Databases and SQLAlchemy.ipynb
+++ b/2016/session-3/Session 3 - Databases and SQLAlchemy.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-03-03 16:41:27,584 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n"
+      "2016-03-04 12:08:37,304 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n"
      ]
     },
     {
@@ -104,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-03-03 16:41:27,585 INFO sqlalchemy.engine.base.Engine ()\n"
+      "2016-03-04 12:08:37,305 INFO sqlalchemy.engine.base.Engine ()\n"
      ]
     },
     {
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-03-03 16:41:27,585 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n"
+      "2016-03-04 12:08:37,306 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n"
      ]
     },
     {
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-03-03 16:41:27,586 INFO sqlalchemy.engine.base.Engine ()\n"
+      "2016-03-04 12:08:37,306 INFO sqlalchemy.engine.base.Engine ()\n"
      ]
     },
     {
@@ -146,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-03-03 16:41:27,587 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"users\")\n"
+      "2016-03-04 12:08:37,308 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"users\")\n"
      ]
     },
     {
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-03-03 16:41:27,587 INFO sqlalchemy.engine.base.Engine ()\n"
+      "2016-03-04 12:08:37,308 INFO sqlalchemy.engine.base.Engine ()\n"
      ]
     },
     {
@@ -168,66 +168,6 @@
      "output_type": "stream",
      "text": [
       "INFO:sqlalchemy.engine.base.Engine:()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2016-03-03 16:41:27,589 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE users (\n",
-      "\tid INTEGER NOT NULL, \n",
-      "\tname VARCHAR, \n",
-      "\tfullname VARCHAR, \n",
-      "\tpassword VARCHAR, \n",
-      "\tPRIMARY KEY (id)\n",
-      ")\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sqlalchemy.engine.base.Engine:\n",
-      "CREATE TABLE users (\n",
-      "\tid INTEGER NOT NULL, \n",
-      "\tname VARCHAR, \n",
-      "\tfullname VARCHAR, \n",
-      "\tpassword VARCHAR, \n",
-      "\tPRIMARY KEY (id)\n",
-      ")\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2016-03-03 16:41:27,589 INFO sqlalchemy.engine.base.Engine ()\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sqlalchemy.engine.base.Engine:()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2016-03-03 16:41:27,590 INFO sqlalchemy.engine.base.Engine COMMIT\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sqlalchemy.engine.base.Engine:COMMIT\n"
      ]
     }
    ],
@@ -291,18 +231,515 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:08:45,261 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:BEGIN (implicit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:08:45,262 INFO sqlalchemy.engine.base.Engine INSERT INTO users (name, fullname, password) VALUES (?, ?, ?)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:INSERT INTO users (name, fullname, password) VALUES (?, ?, ?)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:08:45,263 INFO sqlalchemy.engine.base.Engine ('iamsidd', 'Sidharth Shah', 'mylittlesecret')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:('iamsidd', 'Sidharth Shah', 'mylittlesecret')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:08:45,265 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:COMMIT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added Sidharth to DB\n"
+     ]
+    }
+   ],
    "source": [
     "from sqlalchemy.orm import sessionmaker\n",
     "Session = sessionmaker(bind=engine)\n",
     "session = Session()\n",
     "sidharth = User(name=\"iamsidd\", fullname=\"Sidharth Shah\", password=\"mylittlesecret\")\n",
-    "session.add"
+    "session.add(sidharth)\n",
+    "session.commit()\n",
+    "print \"Added Sidharth to DB\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    " You can also rollback changes using **`session.rollback()`**, but this will only roll back changes made session between commits. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Querying"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:08:48,162 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:BEGIN (implicit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:08:48,164 INFO sqlalchemy.engine.base.Engine SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users ORDER BY users.id\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users ORDER BY users.id\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:08:48,165 INFO sqlalchemy.engine.base.Engine ()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iamsidd Sidharth Shah\n",
+      "iamsidd Sidharth Shah\n"
+     ]
+    }
+   ],
+   "source": [
+    "for instance in session.query(User).order_by(User.id):\n",
+    "    print instance.name, instance.fullname"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aliasing is a feature that will allow you to give friendly names to classes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:12:24,260 INFO sqlalchemy.engine.base.Engine SELECT user_alias.id AS user_alias_id, user_alias.name AS user_alias_name, user_alias.fullname AS user_alias_fullname, user_alias.password AS user_alias_password \n",
+      "FROM users AS user_alias\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:SELECT user_alias.id AS user_alias_id, user_alias.name AS user_alias_name, user_alias.fullname AS user_alias_fullname, user_alias.password AS user_alias_password \n",
+      "FROM users AS user_alias\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:12:24,261 INFO sqlalchemy.engine.base.Engine ()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<User(name='iamsidd', fullname='Sidharth Shah', password='mylittlesecret')>\n",
+      "<User(name='iamsidd', fullname='Sidharth Shah', password='mylittlesecret')>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy.orm import aliased\n",
+    "user_alias = aliased(User, name='user_alias')\n",
+    "\n",
+    "for row in session.query(user_alias, user_alias.name).all():\n",
+    "    print(row.user_alias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:14:16,348 INFO sqlalchemy.engine.base.Engine SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users ORDER BY users.id\n",
+      " LIMIT ? OFFSET ?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users ORDER BY users.id\n",
+      " LIMIT ? OFFSET ?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:14:16,349 INFO sqlalchemy.engine.base.Engine (-1, 1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:(-1, 1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iamsidd\n"
+     ]
+    }
+   ],
+   "source": [
+    "for u in session.query(User).order_by(User.id)[1:]:\n",
+    "    print u.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:14:39,365 INFO sqlalchemy.engine.base.Engine SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users \n",
+      "WHERE users.fullname = ?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users \n",
+      "WHERE users.fullname = ?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:14:39,365 INFO sqlalchemy.engine.base.Engine ('Sidharth Shah',)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:('Sidharth Shah',)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iamsidd\n",
+      "iamsidd\n"
+     ]
+    }
+   ],
+   "source": [
+    "for u in session.query(User).filter_by(fullname='Sidharth Shah'):\n",
+    "    print u.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:18:16,745 INFO sqlalchemy.engine.base.Engine SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users \n",
+      "WHERE users.name LIKE ? ORDER BY users.id\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users \n",
+      "WHERE users.name LIKE ? ORDER BY users.id\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:18:16,746 INFO sqlalchemy.engine.base.Engine ('%iam%',)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:('%iam%',)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<User(name='iamsidd', fullname='Sidharth Shah', password='mylittlesecret')>,\n",
+       " <User(name='iamsidd', fullname='Sidharth Shah', password='mylittlesecret')>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = session.query(User).filter(User.name.like('%iam%')).order_by(User.id)\n",
+    "query.all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:18:27,197 INFO sqlalchemy.engine.base.Engine SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users \n",
+      "WHERE users.name LIKE ? ORDER BY users.id\n",
+      " LIMIT ? OFFSET ?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users \n",
+      "WHERE users.name LIKE ? ORDER BY users.id\n",
+      " LIMIT ? OFFSET ?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:18:27,197 INFO sqlalchemy.engine.base.Engine ('%iam%', 1, 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:('%iam%', 1, 0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<User(name='iamsidd', fullname='Sidharth Shah', password='mylittlesecret')>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query.first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:18:49,125 INFO sqlalchemy.engine.base.Engine SELECT count(*) AS count_1 \n",
+      "FROM (SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users \n",
+      "WHERE users.name LIKE ? ORDER BY users.id) AS anon_1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:SELECT count(*) AS count_1 \n",
+      "FROM (SELECT users.id AS users_id, users.name AS users_name, users.fullname AS users_fullname, users.password AS users_password \n",
+      "FROM users \n",
+      "WHERE users.name LIKE ? ORDER BY users.id) AS anon_1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-03-04 12:18:49,126 INFO sqlalchemy.engine.base.Engine ('%iam%',)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sqlalchemy.engine.base.Engine:('%iam%',)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Relationships"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
